<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="hint_cari">Search movie</string>
    <string name="hint_title">Thor</string>
    <string name="hint_overview">Against his father Odin\'s will, The Mighty Thor - a powerful but arrogant warrior god - recklessly reignites an ancient war.</string>
    <string name="hint_release_date">2012-03-09</string>
    <string name="poster">Poster</string>
    <string name="count_result">Results found</string>
    <string name="overview">Overview</string>
    <string name="tagline">Tagline</string>
    <string name="popularity">Popularity</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="rate_ex">5.0</string>
    <string name="release_ex">2018-10-12</string>
    <string name="duration_ex">90</string>
    <string name="title_cari">Search Movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_text_1">Now Playing</string>
    <string name="tab_text_2">Upcoming</string>
    <string name="ubah_bahasa">Change language</string>
    <string name="cari_movie">Search movie</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="daily_reminder">Daily reminder</string>
    <string name="release_today_reminder">Release today reminder</string>
    <string name="notif_title">Notifikasi</string>
    <string name="notif_content">Content</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
