<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailMovie"
    android:background="@color/colorBackroundWhite">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/img_backdrop_path"
                            android:src="@drawable/ic_image_black_24dp"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/poster"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:cardCornerRadius="@null"
                            android:layout_marginLeft="-3dp"
                            android:layout_marginRight="-3dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_marginLeft="140dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/txt_title"
                                    android:text="@string/hint_title"
                                    android:textStyle="bold"
                                    android:maxLines="3"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:gravity="center_vertical">

                                    <ImageView
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_star_black_24dp"
                                        android:contentDescription="@string/popularity"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/txt_rate"
                                        android:text="@string/rate_ex"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:gravity="center_vertical">

                                    <ImageView
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_date_range_black_24dp"
                                        android:contentDescription="@string/hint_release_date"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/txt_release_date"
                                        android:text="@string/release_ex"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:gravity="center_vertical">

                                    <ImageView
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_mic_black_24dp"
                                        android:contentDescription="@string/language"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/txt_bahasa"
                                        android:text="@string/language"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:gravity="center_vertical">

                                    <ImageView
                                        android:layout_width="20dp"
                                        android:layout_height="20dp"
                                        android:src="@drawable/ic_timelapse_black_24dp"
                                        android:contentDescription="@string/duration"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/txt_runtime"
                                        android:text="@string/duration_ex"/>

                                </LinearLayout>

                            </LinearLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="300dp"
                    android:gravity="bottom"
                    android:layout_marginLeft="20dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="170dp"
                        android:id="@+id/img_poster_path"
                        android:src="@drawable/ic_image_black_24dp"
                        android:scaleType="centerCrop"
                        android:layout_marginBottom="10dp"
                        android:contentDescription="@string/poster"/>

                </LinearLayout>

            </RelativeLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_overview"
                        android:text="@string/overview"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tagline"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_tagline"
                        android:text="@string/tagline"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
